--- a/Main HuB.css
+++ b/Main HuB.css
@@ -7,7 +7,10 @@
   --text-dark: #1e1e1e;
   --text-muted: #6b6b6b;
   --accent: #c8a97e;
-    
+    --bg:#0f0f10;
+    --card:#0f1720;
+    --muted:#ffaded;
+    --accent:#ff6b93;
     --accent-2:#7ad3ff;
     --glass: rgba(255,255,255,0.06);
     --glass-2: rgba(255,255,255,0.03);
@@ -16,8 +19,9 @@
     --fw-sans: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     --fw-serif: "Playfair Display", serif;
 
-      --nav-width: 1200px; 
+      --nav-width: 1200px; /* or any width you want */
   }
+
 
 @font-face {
     font-family: "Themorecrowsfree";
@@ -898,8 +902,9 @@
   font-family:Arial, Helvetica, sans-serif;
   font-size: 22px;
   margin-bottom: 10px;
-  color: black;
+  color: white;
 }
+
 
 .project-content p {
   font-size: 14px;
@@ -939,6 +944,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
