--- a/Main HuB.css
+++ b/Main HuB.css
@@ -902,7 +902,7 @@
   font-family:Arial, Helvetica, sans-serif;
   font-size: 22px;
   margin-bottom: 10px;
-  color: white;
+  color: black;
 }
 
 
@@ -944,6 +944,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
