--- a/Main HuB.css
+++ b/Main HuB.css
@@ -255,10 +255,30 @@
     text-shadow: 0 8px 30px rgba(0,0,0,0.6);
   }
 
-  .bgimg{
-    width: 120%;
-    height:120%;
+.bgimg {
+ width: 120%;
+ height: 120%;
+}
+
+/* Hide mobile video on desktop */
+.bgimg-mobile {
+  display: none;
+}
+
+/* Mobile version */
+@media (max-width: 700px) {
+  .bgimg-desktop {
+    display: none;
+    width: 80px;
+    height: 80px;
   }
+
+  .bgimg-mobile{
+    display: block;
+    width: 110%;
+    height: 110%;
+  }
+}
 
   .hero p.lead{
         font-family: Themorecrowsfree;
@@ -950,6 +970,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
