--- a/Main HuB.css
+++ b/Main HuB.css
@@ -243,7 +243,7 @@
   /* hero content card */
 .hero-content{ 
 
-    position:relative; z-index:6; text-align:center; max-width:1000px; padding-left:28px; padding-right:28px; margin-top: 100px;
+    position:relative; z-index:6; text-align:center; max-width:1000px; padding-left:28px; padding-right:28px; margin-top: 200px;
     display:flex; gap:50px; align-items:center; justify-content:center; flex-direction:column;
     transform:translateY(0); animation:heroFade .9s ease both;
   }
@@ -271,9 +271,11 @@
     display: none;
     width: 80px;
     height: 80px;
+    margin-top: 100px;
   }
 
   .bgimg-mobile{
+    margin-top: 20px;
     display: block;
     width: 110%;
     height: 110%;
@@ -970,6 +972,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
