--- a/Main HuB.css
+++ b/Main HuB.css
@@ -243,7 +243,7 @@
   /* hero content card */
 .hero-content{ 
 
-    position:relative; z-index:6; text-align:center; max-width:1000px; padding-left:28px; padding-right:28px; margin-top: 200px;
+    position:relative; z-index:6; text-align:center; max-width:1000px; padding-left:28px; padding-right:28px; 
     display:flex; gap:50px; align-items:center; justify-content:center; flex-direction:column;
     transform:translateY(0); animation:heroFade .9s ease both;
   }
@@ -972,6 +972,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
