--- a/Main HuB.css
+++ b/Main HuB.css
@@ -256,6 +256,7 @@
   }
 
 .bgimg {
+    margin-top: 100px;
  width: 120%;
  height: 120%;
 }
@@ -972,6 +973,7 @@
 .Featuredh2 {
   margin-top: 50px;
 }
+
 
 
 
