--- a/Main HuB.css
+++ b/Main HuB.css
@@ -981,6 +981,34 @@
 
 
 
+/*Registration forum*/
+
+
+/* Button Style */
+.confirm-btn {
+  margin-top: 20px;
+    display: inline-block;
+    padding: 18px 50px;
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: white;
+    background: linear-gradient(135deg, #ff0066, #6600ff);
+    border-radius: 60px;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    box-shadow: 0 0 25px rgba(255, 0, 102, 0.6);
+}
+
+/* Hover Effect */
+.confirm-btn:hover {
+    transform: scale(1.12);
+    box-shadow: 0 0 50px rgba(102, 0, 255, 0.9);
+}
+.confrimh1{
+  margin-top: 50px;
+}
 
 
 
